bindings/dart/lib/src/ffi/aa_bindings.g.dart


  /// Wait for a UserOp to be included on-chain, returning the full
  /// eth_getUserOperationReceipt JSON response.
  ///
  /// Polls every poll_interval_ms, up to timeout_ms.
  /// Pass 0 for timeout_ms to use default (60 seconds).
  /// Pass 0 for poll_interval_ms to use default (2 seconds).
  ///
  /// On success, *json_out is a heap-allocated JSON string that the caller
  /// must free with aa_free(). *json_len_out is set to the string length.
  ///
  /// The JSON response follows the ERC-4337 eth_getUserOperationReceipt schema:
  /// { userOpHash, entryPoint, sender, nonce, paymaster,
  /// actualGasCost, actualGasUsed, success, logs, receipt }
  aa_status aa_wait_for_user_operation_receipt(
    ffi.Pointer<aa_account_t> account,
    ffi.Pointer<ffi.Uint8> userop_hash,
    int timeout_ms,
    int poll_interval_ms,
    ffi.Pointer<ffi.Pointer<ffi.Char>> json_out,
    ffi.Pointer<ffi.Size> json_len_out,
  ) {
    return aa_status.fromValue(_aa_wait_for_user_operation_receipt(
      account,
      userop_hash,
      timeout_ms,
      poll_interval_ms,
      json_out,
      json_len_out,
    ));
  }

  late final _aa_wait_for_user_operation_receiptPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_account_t>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Size>)>>('aa_wait_for_user_operation_receipt');
  late final _aa_wait_for_user_operation_receipt =
      _aa_wait_for_user_operation_receiptPtr.asFunction<
          int Function(
              ffi.Pointer<aa_account_t>,
              ffi.Pointer<ffi.Uint8>,
              int,
              int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Size>)>();
}

final class aa_account extends ffi.Opaque {}

typedef aa_account_t = aa_account;

/// ---- EIP-7702 authorization ----
final class aa_authorization_t extends ffi.Struct {
  @ffi.Uint64()
  external int chain_id;

  @ffi.Array.multi([20])
  external ffi.Array<ffi.Uint8> address;

  @ffi.Uint64()
  external int nonce;

  @ffi.Uint8()
  external int y_parity;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> r;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> s;
}

/// ---- Call struct ----
final class aa_call extends ffi.Struct {
  @ffi.Array.multi([20])
  external ffi.Array<ffi.Uint8> target;

  /// u256, big-endian
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> value_be;

  external ffi.Pointer<ffi.Uint8> calldata;

  @ffi.Size()
  external int calldata_len;
}

typedef aa_call_t = aa_call;

final class aa_context extends ffi.Opaque {}

/// ---- Opaque handles ----
typedef aa_context_t = aa_context;

/// Gas price middleware function pointer.
/// Called by aa_send_userop to fetch current gas prices.
typedef aa_gas_price_fn
    = ffi.Pointer<ffi.NativeFunction<aa_gas_price_fnFunction>>;
typedef aa_gas_price_fnFunction = ffi.UnsignedInt Function(
    ffi.Pointer<aa_context_t> ctx, ffi.Pointer<aa_gas_prices_t> out);
typedef Dartaa_gas_price_fnFunction = aa_status Function(
    ffi.Pointer<aa_context_t> ctx, ffi.Pointer<aa_gas_prices_t> out);

/// ---- Gas price middleware ----
final class aa_gas_prices_t extends ffi.Struct {
  @ffi.Uint64()
  external int max_fee_per_gas;

  @ffi.Uint64()
  external int max_priority_fee_per_gas;

  static ffi.Pointer<aa_gas_prices_t> $allocate(
    ffi.Allocator $allocator, {
    required int max_fee_per_gas,
    required int max_priority_fee_per_gas,
  }) =>
      $allocator<aa_gas_prices_t>()
        ..ref.max_fee_per_gas = max_fee_per_gas
        ..ref.max_priority_fee_per_gas = max_priority_fee_per_gas;
}

/// Custom HTTP transport — lets host use URLSession (iOS), OkHttp, etc.
///
/// Allocator contract (audit F-02): the response buffer placed in
/// *response_out MUST be allocated via `aa_alloc` (or libc `malloc`) for the
/// SDK to free it directly. Hosts using a different allocator MUST register
/// a matching free callback via `aa_context_set_http_free_fn`. Mixing — a
/// Go/Rust/Python-runtime pointer with no free fn registered — is undefined
/// behavior; on macOS the process aborts immediately.
typedef aa_http_fn = ffi.Pointer<ffi.NativeFunction<aa_http_fnFunction>>;
typedef aa_http_fnFunction = ffi.Int Function(
    ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.Char> url,
    ffi.Pointer<ffi.Char> body,
    ffi.Size body_len,
    ffi.Pointer<ffi.Pointer<ffi.Char>> response_out,
    ffi.Pointer<ffi.Size> response_len_out);
typedef Dartaa_http_fnFunction = int Function(
    ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.Char> url,
    ffi.Pointer<ffi.Char> body,
    int body_len,
    ffi.Pointer<ffi.Pointer<ffi.Char>> response_out,
    ffi.Pointer<ffi.Size> response_len_out);

/// Optional companion to aa_http_fn. If registered, the SDK calls this to
/// release the response buffer instead of libc `free`.
typedef aa_http_free_fn
    = ffi.Pointer<ffi.NativeFunction<aa_http_free_fnFunction>>;
typedef aa_http_free_fnFunction = ffi.Void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.Uint8> response, ffi.Size response_len);
typedef Dartaa_http_free_fnFunction = void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.Uint8> response, int response_len);

/// ---- Kernel version enum ----
enum aa_kernel_version {
  AA_KERNEL_V3_3(0);

  final int value;
  const aa_kernel_version(this.value);

  static aa_kernel_version fromValue(int value) => switch (value) {
        0 => AA_KERNEL_V3_3,
        _ => throw ArgumentError('Unknown value for aa_kernel_version: $value'),
      };
}

/// Paymaster middleware function pointer.
/// Called by aa_send_userop to sponsor UserOperations.
/// Receives UserOp JSON, entry point, chain ID, and phase.
///
/// Allocator contract (audit F-02): `paymaster_data` MUST be allocated via
/// `aa_alloc` (or libc `malloc`) when the SDK is responsible for freeing.
/// If your runtime uses a different allocator (Go runtime, Rust global,
/// etc.), register a matching free callback via
/// `aa_context_set_paymaster_free_fn`. The built-in `aa_paymaster_zerodev`
/// uses libc allocation, so consumers using only it need no extra wiring.
///
/// Optional: if not set, aa_send_userop sends unsponsored (user pays gas).
typedef aa_paymaster_fn
    = ffi.Pointer<ffi.NativeFunction<aa_paymaster_fnFunction>>;
typedef aa_paymaster_fnFunction = ffi.UnsignedInt Function(
    ffi.Pointer<aa_context_t> ctx,
    ffi.Pointer<ffi.Char> userop_json,
    ffi.Size userop_json_len,
    ffi.Pointer<ffi.Char> entry_point,
    ffi.Uint64 chain_id,
    ffi.UnsignedInt phase,
    ffi.Pointer<aa_paymaster_result_t> out);
typedef Dartaa_paymaster_fnFunction = aa_status Function(
    ffi.Pointer<aa_context_t> ctx,
    ffi.Pointer<ffi.Char> userop_json,
    int userop_json_len,
    ffi.Pointer<ffi.Char> entry_point,
    int chain_id,
    aa_pm_phase phase,
    ffi.Pointer<aa_paymaster_result_t> out);

/// Optional companion to aa_paymaster_fn. If registered, the SDK calls this
/// to release `paymaster_data` instead of libc `free`. See aa_paymaster_fn
/// doc comment for the allocator contract.
typedef aa_paymaster_free_fn
    = ffi.Pointer<ffi.NativeFunction<aa_paymaster_free_fnFunction>>;
typedef aa_paymaster_free_fnFunction = ffi.Void Function(
    ffi.Pointer<aa_context_t> ctx,
    ffi.Pointer<ffi.Uint8> paymaster_data,
    ffi.Size paymaster_data_len);
typedef Dartaa_paymaster_free_fnFunction = void Function(
    ffi.Pointer<aa_context_t> ctx,
    ffi.Pointer<ffi.Uint8> paymaster_data,
    int paymaster_data_len);

final class aa_paymaster_result_t extends ffi.Struct {
  @ffi.Array.multi([20])
  external ffi.Array<ffi.Uint8> paymaster;

  @ffi.Uint64()
  external int paymaster_verification_gas_limit;

  @ffi.Uint64()
  external int paymaster_post_op_gas_limit;

  external ffi.Pointer<ffi.Uint8> paymaster_data;

  @ffi.Size()
  external int paymaster_data_len;
}

/// ---- Paymaster middleware ----
enum aa_pm_phase {
  /// Before gas estimation
  AA_PM_STUB(0),

  /// After gas estimation
  AA_PM_FINAL(1);

  final int value;
  const aa_pm_phase(this.value);

  static aa_pm_phase fromValue(int value) => switch (value) {
        0 => AA_PM_STUB,
        1 => AA_PM_FINAL,
        _ => throw ArgumentError('Unknown value for aa_pm_phase: $value'),
      };
}

final class aa_signer extends ffi.Opaque {}

typedef aa_signer_t = aa_signer;

/// Create a custom signer from a vtable of function pointers.
///
/// sign_authorization is OPTIONAL (may be NULL). When NULL, the SDK falls back
/// to computing keccak256(0x05 || rlp([chainId, address, nonce])) and calling
/// sign_hash.
///
/// NOTE: This field was appended to the struct. Consumers MUST recompile against
/// this header before linking — the ABI is NOT compatible with code that was
/// built against the older 4-field vtable (the SDK reads past the old layout).
/// C99 zero-initialization (`aa_signer_vtable v = {.sign_hash = ...};`) covers
/// this field automatically at compile time, making the change source-compatible.
final class aa_signer_vtable extends ffi.Struct {
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void> ctx,
              ffi.Pointer<ffi.Uint8> hash,
              ffi.Pointer<ffi.Uint8> sig_out)>> sign_hash;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void> ctx,
              ffi.Pointer<ffi.Uint8> msg,
              ffi.Size msg_len,
              ffi.Pointer<ffi.Uint8> sig_out)>> sign_message;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void> ctx,
              ffi.Pointer<ffi.Uint8> hash,
              ffi.Pointer<ffi.Uint8> sig_out)>> sign_typed_data_hash;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<ffi.Void> ctx, ffi.Pointer<ffi.Uint8> addr_out)>>
      get_address;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void> ctx,
              ffi.Uint64 chain_id,
              ffi.Pointer<ffi.Uint8> address,
              ffi.Uint64 nonce,
              ffi.Pointer<aa_authorization_t> out)>> sign_authorization;
